--- a/src/Components/Tickets/Tickets.css
+++ b/src/Components/Tickets/Tickets.css
@@ -42,6 +42,7 @@
     font-size: 25px;
     list-style-type:initial;
     padding: 15px;
+    text-align: left;
 }
 .ticketBuy {
     display:flex;
